[project]
name = "casty"
dynamic = ["version"]
description = "Typed, clustered actor framework for Python. Pure asyncio, zero dependencies."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Gabriel Francisco"}]
keywords = ["actor", "async", "actor-model", "asyncio", "concurrency", "cluster", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

[project.optional-dependencies]
performance = [
    "uvloop>=0.22.1",
]

[project.urls]
Homepage = "https://gabfssilva.github.io/casty/"
Repository = "https://github.com/gabfssilva/casty"
Documentation = "https://gabfssilva.github.io/casty/"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/casty"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.0.0",
    "pyright>=1.1",
    "ruff>=0.9",
    "testcontainers>=4.14.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "trustme>=1.2.1",
    "asyncssh>=2.22.0",
    "cloudpickle>=3.1.2",
]
docs = [
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-m 'not benchmark' --durations=0 -n auto"
markers = ["benchmark: performance benchmarks (deselect with '-m not benchmark')"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
