[project]
name = "casty"
version = "2.0.0a0"
description = "Typed, clustered actor framework for Python"
requires-python = ">=3.12"
dependencies = ["msgpack>=1.0"]

[project.optional-dependencies]
lz4 = ["lz4>=4.0"]
zstd = ["zstandard>=0.22"]
uvloop = ["uvloop>=0.21"]
# copy-on-write is the whole diff, and it is only guaranteed from pandas 3.0
pandas = ["pandas>=3.0", "pyarrow>=17"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.6",
    "msgpack-types>=0.3",
    "pandas>=3.0",
    "pandas-stubs>=2.2",
    "pyarrow>=17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/casty"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["lz4.*", "zstandard.*", "docker.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv]
package = true
