[project]
name = "casty-aws-cluster"
version = "0.1.0"
description = "Casty 10-node AWS cluster with FastAPI"
requires-python = ">=3.13"
dependencies = [
    "casty",
    "fastapi>=0.128.3",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
infra = [
    "pulumi>=3.219.0",
    "pulumi-aws>=7.19.0",
    "pulumi-docker>=4.11.0",
]

[tool.uv.sources]
casty = { path = "../../" }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
