[project]
name = "casty-loadtest"
version = "0.1.0"
description = "Casty load + resilience test suite"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "asyncssh>=2.21.0",
]

[project.optional-dependencies]
infra = [
    "pulumi>=3.219.0",
    "pulumi-aws>=7.19.0",
    "pulumi-docker>=4.11.0",
]
app = [
    "casty",
    "fastapi>=0.128.3",
    "uvicorn[standard]>=0.40.0",
    "pydantic>=2.12.5",
]

[tool.uv.sources]
casty = { path = "../../" }

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
